@@ -3787,6 +3787,7 @@ umass_format=username:realname:password:ftp-flag:email-flag:quota:[extras]:[forw
 umass_eshell=No suitable shell found for specified FTP mode
 umass_eshell2=Shell $1 is not available for mail / FTP users
 umass_encpass=Passwords are already encrypted?
+umass_randpass=Generate random passwords when empty?
 
 amass_title=Batch Create Aliases
 amass_header=Create multiple email aliases from batch file
