@@ -1078,3 +1078,4 @@ Allowed script installers can now be set at the plan level and on the Edit Owner
 Added the --plan flag to the create-reseller API command, to copy limits from a plan.
 Link script names to their home pages.
 Added option to not add MX records for secondary mail servers.
+Added an option on the Batch Create Users page to generate passwords randomly, and a --random-pass flag to create-user.pl.
